@@ -1,4 +1,7 @@
 release 1.3 (05/06-2010)
+- Fixed issue 521
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=520
+  Support matching when quality of source, qs, values are less than 1.
 - Fixed issue 520
   https://jersey.dev.java.net/issues/show_bug.cgi?id=520
   When Guice support is configured enable Guice injection of resource
